<resources>
    <string name="no_internet">No internet...</string>
    <string name="app_name">Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_made_by_paulina">App made by Paulina</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="about">about</string>
    <string name="items">items</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>
    <string name="overview">Overview</string>
    <string name="movie_title">Movie title</string>
    <string name="english">English</string>
    <string name="croatian">Croatian</string>
    <string name="release_date">Release date:</string>
    <string name="rating">Rating:</string>
    <string name="schedule_reminder">Schedule Reminder</string>
    <string name="reminder_set_message">Reminder set for 1 minute from now!</string>
    <string name="don_t_forget_to_watch_your_movie">Don\'t forget to watch your movie!</string>


</resources>